fixed modal window alignment

--- a/app/src/css/calendar.css
+++ b/app/src/css/calendar.css
@@ -4,6 +4,8 @@ html, body {
     width: 100%;
     height: 100%;
     background-color: #FFFFFF;
+    min-width: 1000px;
+    min-height: 1000px;
 }
 
 .cal-wind__authorization-bar {
